Update base path for dotfiles

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -9,6 +9,8 @@ RUN apt-get -qq install git
 RUN apt-get -qq install ruby
 RUN apt-get -qq install telnet
 RUN apt-get -qq install tmux
+RUN apt-get -qq install vim
+RUN apt-get -qq install vim-syntax-docker
 RUN apt-get -qq install wget
 RUN apt-get -qq install wget
 RUN apt-get -qq install zsh
@@ -24,10 +26,14 @@ USER matt
 ENV ZSH /home/matt/.oh-my-zsh
 RUN git clone https://github.com/robbyrussell/oh-my-zsh.git ${ZSH}
 
-RUN git clone https://github.com/pfeff/dotfiles.git src/github/pfeff/dotfiles
-RUN ln -s ~/src/github/pfeff/dotfiles/zshrc .zshrc
-RUN ln -s ~/src/github/pfeff/dotfiles/tmux.conf .tmux.conf
-RUN ln -s ~/src/github/pfeff/dotfiles/vim .vim
-RUN ln -s ~/src/github/pfeff/dotfiles/vimrc .vimrc
+RUN git clone https://github.com/pfeff/dotfiles.git dotfiles
+RUN ln -s ~/dotfiles/zshrc .zshrc
+RUN ln -s ~/dotfiles/tmux.conf .tmux.conf
+RUN ln -s ~/dotfiles/tmuxinator .tmuxinator
+RUN ln -s ~/dotfiles/vim .vim
+RUN ln -s ~/dotfiles/vimrc .vimrc
+
+RUN git config --global user.email "matthew.pfefferle@gmail.com"
+RUN git config --global user.name "Matt Pfefferle"
 
 CMD /bin/zsh
