--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -8,5 +8,5 @@ all: build
 build:
 	docker build -t $(NAME):$(VERSION) --rm .
 
-run:
+run: build
 	docker run --rm -it --entrypoint=/bin/bash --volume $(SSH_AUTH_SOCK):/ssh-agent --env SSH_AUTH_SOCK=/ssh-agent $(NAME):$(VERSION)
